fix overlay not covering entire body

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,11 +2,11 @@
 
 .adhs-container {
   display: block;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background-color: rgba(0, 0, 0, 0);
   z-index: 9999;
   opacity: 0;
